Move more config to fluent di format

--- a/config/api-internal/routes.yaml
+++ b/config/api-internal/routes.yaml
@@ -4,7 +4,7 @@ parameters:
 
         api_internal:
             route: '/api/internal'
-            stack: ['middleware.signed_in']
+            stack: ['m.signed_in']
 
             routes:
 
